Rollback config.py changes to use envs

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
-OPENAI_API_KEY=
-TAVILY_API_KEY=
-LANGCHAIN_API_KEY=
+LLM_BASE_URL=http://127.0.0.1:11434
+RETRIEVER=duckduckgo
+EMBEDDING_PROVIDER=ollama
+LLM_PROVIDER=ollama
+FAST_LLM_MODEL=mixtral:8x7b-instruct-v0.1-q6_K
+SMART_LLM_MODEL=mixtral:8x7b-instruct-v0.1-q6_K
+TOTAL_WORDS=1000
